update html file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h3>CSS Grid examples</h3>
+    <div class="grid">
+        <div class="box item1">Masonry I</div>
+        <div class="box item2">Responsive</div>
+        <div class="box item3">Overlap</div>
+        <div class="box item4">Fluid</div>
+        <div class="box item5">explicity placed</div>
+        <div class="box item6">negative space</div>
+        <div class="box item7">Flexible Breadth</div>
+        <div class="box item8">masonry II</div>
+        <div class="box item9">masonry III</div>
+        <div class="box item10">dom order</div>
+        <div class="box item11">named tracks</div>
+    </div>
 </body>
 </html>
